# UltraTTS

./: .README.md.kate-swp  CMakeLists.txt  LICENSE  README.md  io.github.Ultraguy24.UltraTTS.yml  main.cpp
.flatpak-builder/cache/refs/heads/x86_64-io.github.Ultraguy24.UltraTTS.yml/: build-UltraTTS  cleanup  finish  init
.flatpak-builder/checksums/: x86_64-io.github.Ultraguy24.UltraTTS.yml
.flatpak-builder/git/https_github.com_Ultraguy24_UltraTTS.git/: FETCH_HEAD  config  shallow
.flatpak-builder/git/https_github.com_Ultraguy24_UltraTTS.git/objects/pack/: pack-0ddd8ab1102fca93995b68eb7ecf4a45a3b6a153.idx  pack-0ddd8ab1102fca93995b68eb7ecf4a45a3b6a153.pack  pack-0ddd8ab1102fca93995b68eb7ecf4a45a3b6a153.rev  pack-211215c49a95b05a07aac168ffc9ae9e2516a1a1.idx  pack-211215c49a95b05a07aac168ffc9ae9e2516a1a1.pack  pack-211215c49a95b05a07aac168ffc9ae9e2516a1a1.rev  pack-2c87b466bcd213c61545b594c129a9cf8442cffa.idx  pack-2c87b466bcd213c61545b594c129a9cf8442cffa.pack  pack-2c87b466bcd213c61545b594c129a9cf8442cffa.rev  pack-957878bf2dbf02828a2a6e98d17b6120eb0897d6.idx  pack-957878bf2dbf02828a2a6e98d17b6120eb0897d6.pack  pack-957878bf2dbf02828a2a6e98d17b6120eb0897d6.rev  pack-a62903f87a0f7b712a2190dac549c2d91555417b.idx  pack-a62903f87a0f7b712a2190dac549c2d91555417b.pack  pack-a62903f87a0f7b712a2190dac549c2d91555417b.rev  pack-aab628f224dd13336dac7bb86c82eaecfbadc12e.idx  pack-aab628f224dd13336dac7bb86c82eaecfbadc12e.pack  pack-aab628f224dd13336dac7bb86c82eaecfbadc12e.rev  pack-cfd5c038821b05e6ade65dea25a4a222668f757f.idx  pack-cfd5c038821b05e6ade65dea25a4a222668f757f.pack  pack-cfd5c038821b05e6ade65dea25a4a222668f757f.rev
.flatpak-builder/git/https_github.com_Ultraguy24_UltraTTS.git/refs/heads/: main
repo/: summary  summary.idx
repo/refs/heads/app/io.github.Ultraguy24.UltraTTS/x86_64/: master
repo/refs/heads/runtime/io.github.Ultraguy24.UltraTTS.Debug/x86_64/: master
repo/summaries/: f400a68f8157ac9e5b5076dc7615571f8ba59bf13365d0b90e5d60e99cda1afd-10d6d866a68cc316b1197e25feef8494366d340e029e70bdd120dcaff3535035.delta
